kube-manifests/ingress-manifests/kubia-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: kubia
spec:
  rules:
  - host: kubia.fortius.phz
    http:
      paths:
      - path: /
        backend:
          serviceName: kubia
          servicePort: 80
